--- a/step1.2.html
+++ b/step1.2.html
@@ -121,5 +121,7 @@
 </div>
 
 
+<script type="text/javascript" src="./js/jquery-3.5.1.slim.min.js"></script>
+<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
