--- a/step1.4.html
+++ b/step1.4.html
@@ -67,6 +67,7 @@
     </div>
 </div>
 
-
+<script type="text/javascript" src="./js/jquery-3.5.1.slim.min.js"></script>
+<script type="text/javascript" src="./js/main.js"></script>
 </body>
 </html>
