--- a/step1.1.html
+++ b/step1.1.html
@@ -48,78 +48,159 @@
                 <div class="delivery-service">
                     <p>Выберите службы доставки, которые будете отслеживать:</p>
                 </div>
-                <form action="" class="delivery-form js-delivery-form">
-                    <div class="ds-checkbox-box js-choose-all-checkbox">
-                        <input class="ds-input-checkbox" type="checkbox" id="ds_1">
-                        <label class="ds-label-checkbox" for="ds_1">Выбрать все</label>
-                    </div>
-                    <div class="js-rest-checkbox">
-                        <div class="ds-checkbox-box">
-                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_2">
-                            <label class="ds-label-checkbox" for="ds_2">Почта России</label>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_2_1">
-                                <label class="ds-label-checkbox" for="ds_2_1">Самовывоз</label>
+                    <form action="" class="delivery-checkbox-form js-delivery-form">
+                        <div class="block-checkbox">
+                            <div class="ds-checkbox-box checkbox-all">
+                                <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_1">
+                                <label class="ds-label-checkbox ds-label js-all-label-checkbox" for="ds_1">Выбрать все</label>
                             </div>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_2_2">
-                                <label class="ds-label-checkbox" for="ds_2_2">Курьер</label>
-                            </div>
-                        </div>
-                        <div class="ds-checkbox-box">
-                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_3">
-                            <label class="ds-label-checkbox" for="ds_3">CDEK</label>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_3_1">
-                                <label class="ds-label-checkbox" for="ds_3_1">Самовывоз</label>
-                            </div>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_3_2">
-                                <label class="ds-label-checkbox" for="ds_3_2">Курьер</label>
-                            </div>
-                        </div>
-                        <div class="ds-checkbox-box">
-                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_4">
-                            <label class="ds-label-checkbox" for="ds_4">Boxberry</label>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_4_1">
-                                <label class="ds-label-checkbox" for="ds_4_1">Самовывоз</label>
-                            </div>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_4_2">
-                                <label class="ds-label-checkbox" for="ds_4_2">Курьер</label>
-                            </div>
-                        </div>
-                        <div class="ds-checkbox-box">
-                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_5">
-                            <label class="ds-label-checkbox" for="ds_5">EMC</label>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_5_1">
-                                <label class="ds-label-checkbox" for="ds_5_1">Самовывоз</label>
-                            </div>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_5_2">
-                                <label class="ds-label-checkbox" for="ds_5_2">Курьер</label>
-                            </div>
-                        </div>
-                        <div class="ds-checkbox-box">
-                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_6">
-                            <label class="ds-label-checkbox" for="ds_6">InSales</label>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_6_1">
-                                <label class="ds-label-checkbox" for="ds_6_1">Самовывоз</label>
-                            </div>
-                            <div class="ds-checkbox-box ds-checkbox-under">
-                                <input class="ds-input-checkbox" type="checkbox" id="ds_6_2">
-                                <label class="ds-label-checkbox" for="ds_6_2">Курьер</label>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="delivery-further">
-                        <button class="delivery-further__button" disabled>Далее</button>
-                    </div>
-                </form>
+                            <div class="ds-checkbox-box checkbox-other">
+                                <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_2">
+                                <label class="ds-label-checkbox ds-label js-delivery-label" for="ds_2">Почта России</label>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_2_1">
+                                    <label class="ds-label-checkbox ds-label" for="ds_2_1">Самовывоз</label>
+                                </div>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_2_2">
+                                    <label class="ds-label-checkbox ds-label" for="ds_2_2">Курьер</label>
+                                </div>
+                            </div>
+
+                            <div class="ds-checkbox-box checkbox-other">
+                                <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_3">
+                                <label class="ds-label-checkbox ds-label js-delivery-label" for="ds_3">CDEK</label>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_3_1">
+                                    <label class="ds-label-checkbox ds-label" for="ds_3_1">Самовывоз</label>
+                                </div>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_3_2">
+                                    <label class="ds-label-checkbox ds-label" for="ds_3_2">Курьер</label>
+                                </div>
+                            </div>
+
+                            <div class="ds-checkbox-box checkbox-other">
+                                <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_4">
+                                <label class="ds-label-checkbox ds-label js-delivery-label" for="ds_4">Boxberry</label>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_4_1">
+                                    <label class="ds-label-checkbox ds-label" for="ds_4_1">Самовывоз</label>
+                                </div>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_4_2">
+                                    <label class="ds-label-checkbox ds-label" for="ds_4_2">Курьер</label>
+                                </div>
+                            </div>
+
+                            <div class="ds-checkbox-box checkbox-other">
+                                <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_5">
+                                <label class="ds-label-checkbox ds-label js-delivery-label" for="ds_5">EMC</label>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_5_1">
+                                    <label class="ds-label-checkbox ds-label" for="ds_5_1">Самовывоз</label>
+                                </div>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_5_2">
+                                    <label class="ds-label-checkbox ds-label" for="ds_5_2">Курьер</label>
+                                </div>
+                            </div>
+
+                            <div class="ds-checkbox-box checkbox-other">
+                                <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_6">
+                                <label class="ds-label-checkbox ds-label js-delivery-label" for="ds_6">InSales</label>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_6_1">
+                                    <label class="ds-label-checkbox ds-label" for="ds_6_1">Самовывоз</label>
+                                </div>
+                                <div class="ds-checkbox-box block-checkbox-under">
+                                    <input class="ds-input-checkbox ds-checkbox" type="checkbox" id="ds_6_2">
+                                    <label class="ds-label-checkbox ds-label" for="ds_6_2">Курьер</label>
+                                </div>
+                            </div>
+
+                            <div class="delivery-further">
+                                <button class="delivery-further__button" disabled>Далее</button>
+                            </div>
+
+                        </div>
+                    </form>
+<!--                <form action="" class="delivery-form js-delivery-form">-->
+
+<!--                    <div class="ds-checkbox-box">-->
+<!--                        <input class="ds-input-checkbox" type="checkbox" id="ds_1">-->
+<!--                        <label class="ds-label-checkbox js-choose-all-checkbox" for="ds_1">Выбрать все</label>-->
+<!--                    </div>-->
+<!--                    <div class="js-rest-checkbox">-->
+
+<!--                        <div class="ds-checkbox-box">-->
+<!--                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_2">-->
+<!--                            <label class="ds-label-checkbox js-revealing-checkbox" for="ds_2">Почта России</label>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_2_1">-->
+<!--                                <label class="ds-label-checkbox" for="ds_2_1">Самовывоз</label>-->
+<!--                            </div>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_2_2">-->
+<!--                                <label class="ds-label-checkbox" for="ds_2_2">Курьер</label>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="ds-checkbox-box">-->
+<!--                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_3">-->
+<!--                            <label class="ds-label-checkbox js-revealing-checkbox" for="ds_3">CDEK</label>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_3_1">-->
+<!--                                <label class="ds-label-checkbox" for="ds_3_1">Самовывоз</label>-->
+<!--                            </div>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_3_2">-->
+<!--                                <label class="ds-label-checkbox" for="ds_3_2">Курьер</label>-->
+<!--                            </div>-->
+<!--                        </div>-->
+
+<!--                        <div class="ds-checkbox-box">-->
+<!--                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_4">-->
+<!--                            <label class="ds-label-checkbox" for="ds_4">Boxberry</label>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_4_1">-->
+<!--                                <label class="ds-label-checkbox" for="ds_4_1">Самовывоз</label>-->
+<!--                            </div>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_4_2">-->
+<!--                                <label class="ds-label-checkbox" for="ds_4_2">Курьер</label>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="ds-checkbox-box">-->
+<!--                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_5">-->
+<!--                            <label class="ds-label-checkbox" for="ds_5">EMC</label>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_5_1">-->
+<!--                                <label class="ds-label-checkbox" for="ds_5_1">Самовывоз</label>-->
+<!--                            </div>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_5_2">-->
+<!--                                <label class="ds-label-checkbox" for="ds_5_2">Курьер</label>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="ds-checkbox-box">-->
+<!--                            <input class="ds-input-checkbox revealing-checkbox" type="checkbox" id="ds_6">-->
+<!--                            <label class="ds-label-checkbox" for="ds_6">InSales</label>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_6_1">-->
+<!--                                <label class="ds-label-checkbox" for="ds_6_1">Самовывоз</label>-->
+<!--                            </div>-->
+<!--                            <div class="ds-checkbox-box ds-checkbox-under">-->
+<!--                                <input class="ds-input-checkbox" type="checkbox" id="ds_6_2">-->
+<!--                                <label class="ds-label-checkbox" for="ds_6_2">Курьер</label>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+
+<!--                    <div class="delivery-further">-->
+<!--                        <button class="delivery-further__button" disabled>Далее</button>-->
+<!--                    </div>-->
+<!--                </form>-->
             </div>
             <div class="content-integration">
                 <img class="content-integration__example" src="./images/example.png" alt="">
@@ -127,8 +208,13 @@
         </div>
     </div>
 
+    <div class="main-checkbox">
+
+
+    </div>
+
 
     <script type="text/javascript" src="./js/jquery-3.5.1.slim.min.js"></script>
-    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./js/checkbox.js"></script>
 </body>
 </html>
