--- a/step1.2.html
+++ b/step1.2.html
@@ -57,12 +57,14 @@
         </div>
         <div class="content-integration">
             <div class="content-status">
-                <div class="status-line">
-                    <span class="status-name status-name__head">Статус службы доставки</span>
-                    <span class="status-name status-name__head">Статус заказа в Insales</span>
+                <div class="status-line status-line_desktop">
+                    <span class="status-name status-name__head status-name__head_desktop">Статус службы доставки</span>
+                    <span class="status-name status-name__head status-name__head_desktop">Статус заказа в Insales</span>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Статус службы доставки</div>
                     <span class="status-name">Присвоен трек-номер</span>
+                    <div class="status-name__head status-name__head_mobile">Статус заказа в Insales</div>
                     <select name="" class="status-select">
                         <option value="" disabled selected style='display:none;'>Выберите статус</option>
                         <option value="1">test1</option>
@@ -71,7 +73,9 @@
                     </select>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Статус службы доставки</div>
                     <span class="status-name">Передана в службу доставки</span>
+                    <div class="status-name__head status-name__head_mobile">Статус заказа в Insales</div>
                     <select name="" class="status-select">
                         <option value="" disabled selected style='display:none;'>Выберите статус</option>
                         <option value="1">test1</option>
@@ -80,7 +84,9 @@
                     </select>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Статус службы доставки</div>
                     <span class="status-name">Передана курьеру</span>
+                    <div class="status-name__head status-name__head_mobile">Статус заказа в Insales</div>
                     <select name="" class="status-select">
                         <option value="" disabled selected style='display:none;'>Выберите статус</option>
                         <option value="1">test1</option>
@@ -89,7 +95,9 @@
                     </select>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Статус службы доставки</div>
                     <span class="status-name">В месте получения</span>
+                    <div class="status-name__head status-name__head_mobile">Статус заказа в Insales</div>
                     <select name="" class="status-select">
                         <option value="" disabled selected style='display:none;'>Выберите статус</option>
                         <option value="1">test1</option>
@@ -98,7 +106,9 @@
                     </select>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Статус службы доставки</div>
                     <span class="status-name">Получена</span>
+                    <div class="status-name__head status-name__head_mobile">Статус заказа в Insales</div>
                     <select name="" class="status-select">
                         <option value="" disabled selected style='display:none;'>Выберите статус</option>
                         <option value="1">test1</option>
@@ -107,7 +117,9 @@
                     </select>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Статус службы доставки</div>
                     <span class="status-name">Истёк срок хранения</span>
+                    <div class="status-name__head status-name__head_mobile">Статус заказа в Insales</div>
                     <select name="" class="status-select">
                         <option value="" disabled selected style='display:none;'>Выберите статус</option>
                         <option value="1">test1</option>
