--- a/step1.3.html
+++ b/step1.3.html
@@ -63,12 +63,14 @@
         </div>
         <div class="content-integration">
             <div class="content-status custom-select">
-                <div class="status-line">
-                    <span class="status-name status-name__head">Вид оплаты</span>
-                    <span class="status-name status-name__head">Вид оплаты в Insales</span>
+                <div class="status-line status-line_desktop">
+                    <span class="status-name status-name__head status-name__head_desktop">Вид оплаты</span>
+                    <span class="status-name status-name__head status-name__head_desktop">Вид оплаты в Insales</span>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Вид оплаты</div>
                     <span class="status-name">Наложенный платеж</span>
+                    <div class="status-name__head status-name__head_mobile">Вид оплаты в Insales</div>
                     <div class="checkselect">
                         <div class="ds-checkbox-box">
                             <input class="ds-input-checkbox" type="checkbox" id="cod_1" name="">
@@ -97,7 +99,9 @@
                     </div>
                 </div>
                 <div class="status-line">
+                    <div class="status-name__head status-name__head_mobile">Вид оплаты</div>
                     <span class="status-name">Предоплата</span>
+                    <div class="status-name__head status-name__head_mobile">Вид оплаты в Insales</div>
                     <div class="checkselect">
                         <div class="ds-checkbox-box">
                             <input class="ds-input-checkbox" type="checkbox" id="prepayment_1" name="">
