--- a/step1.2.html
+++ b/step1.2.html
@@ -31,7 +31,7 @@
     <div class="status-head status-head-mobile">
         <h2 class="general-head">Шаг 2. Настройка синхронизации статусов</h2>
         <p class="general-paragraph">
-            Статус заказа InSales будет автоматически меняться в зависимости от статуса службы доставки. Вы можете испоьзовать как стандартные статусы InSales, так и пользовательские.
+            Статус заказа InSales будет автоматически меняться в зависимости от статуса службы доставки. Вы можете использовать как стандартные статусы InSales, так и пользовательские.
         </p>
         <p class="general-paragraph">
             Этот шаг можно пропустить. Нажмите далее, чтобы пропустить настройку синхронизации статусов.
